--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,24 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <button
-        class="btn btn-primary"
-        (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
+      <button class="btn btn-primary" (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
       <br><br>
       <ul class="list-group">
-        <li
-          class="list-group-item">
-        </li>
+        <div *ngIf="onlyOdd">
+          <li class="list-group-item" *ngFor="let number of oddNumbers" [ngClass]="{ 'odd': (number%2 != 0) }"
+            [ngStyle]="{ backgroundColor: number%2 != 0 ? 'yellow':'transparent' }">
+            {{ number }}
+          </li>
+        </div>
+
+        <div *ngIf="!onlyOdd">
+          <li class="list-group-item" *ngFor="let number of evenNumbers">
+            {{ number }}
+          </li>
+        </div>
       </ul>
       <ng-template [ngIf]="onlyOdd">
-        <p>Only odd</p>
+        <p style="font-weight: 800; text-decoration: underline;">Only odd</p>
       </ng-template>
     </div>
   </div>
