Creates a new Attribute Directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
         </div>
       </ul>
       <ng-template [ngIf]="onlyOdd">
-        <p style="font-weight: 800; text-decoration: underline;">Only odd</p>
+        <p style="font-weight: 800; text-decoration: underline;" appBasicHighlight>Only odd</p>
       </ng-template>
     </div>
   </div>
