--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,13 @@
         <p style="font-weight: 800; text-decoration: underline;" appBetterHighlight [defaultColor]="'yellow'"
           [highlightColor]="'red'">Only odd</p>
       </ng-template>
+
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">Value is 5</p>
+        <p *ngSwitchCase="10">Value is 10</p>
+        <p *ngSwitchCase="25">Value is 25</p>
+        <p *ngSwitchDefault>Value is Default</p>
+      </div>
     </div>
   </div>
 </div>
